# lotus-challenge

./: DESIGN_DECISIONS.md  README.md  pyproject.toml
.cursor/: mcp.json
fhir_conditions_manager/: condition_model.py  condition_store.py  corrections.py  ingestion.py  main.py  mcp_tools.py  monitoring.py  retrieval.py
