[project]
name = "fhir-conditions-manager"
version = "0.1.0"
description = "FHIR Conditions Manager with MCP tools for RAG retrieval and corrections"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "pydantic>=2.12.5",
]

[project.scripts]
fhir-conditions-manager = "fhir_conditions_manager.main:main"
